Service worker & a11y improvements
Incorporated feedback from code review

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" role='application' aria-label="Container for map">
+      <div id="map" role='application' aria-label="map div"></div>
     </section>
     <section>
       <div class="filter-options">
