--- a/restaurant.html
+++ b/restaurant.html
@@ -20,10 +20,11 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <nav aria-label="breadcrumb" class='breadcrumb'>
+    <ul id="breadcrumb">
       <li><a href="/">Home</a></li>
     </ul>
-    <!-- End breadcrumb -->
+  </nav>
     <!-- End nav -->
   </header>
   <!-- End header -->
@@ -31,14 +32,14 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" role='application' aria-label="Container for map">
+      <div id="map" role='application' aria-label="map div"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <p id="restaurant-cuisine"></p>
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img" alt="Photo of restaurant">
       <table id="restaurant-hours"></table>
       <p id="restaurant-address"></p>
